# dangdai-app

./: .gitignore  AGENTS.md  README.md  project-requirement.md
.github/workflows/: ci-backend.yml  ci-mobile.yml  deploy-backend.yml  eas-build.yml
_bmad-output/implementation-artifacts/: 2-4-sign-out.md  (+36 more)
dangdai-api/: .dockerignore  .env.example  Dockerfile  README.md  langgraph.json  pyproject.toml
dangdai-api/src/: __init__.py
dangdai-api/src/agent/: __init__.py  graph.py  nodes.py  prompts.py  state.py
dangdai-api/src/api/: dependencies.py  main.py  middleware.py  schemas.py
dangdai-api/src/api/routes/: health.py  quizzes.py
dangdai-api/src/repositories/: __init__.py  chapter_repo.py  performance_repo.py  vector_store.py
dangdai-api/src/services/: auth_service.py  quiz_service.py  rag_service.py  validation_service.py  weakness_service.py
dangdai-api/src/utils/: config.py  llm.py  llm_factory.py  supabase.py
dangdai-api/tests/: conftest.py  test_api.py  test_llm_factory.py  test_quiz_generation.py  test_rag_retrieval.py  test_schemas.py  test_validation_service.py
dangdai-api/tests/integration_tests/: test_graph.py  test_llm_provider.py
dangdai-api/tests/unit_tests/: test_infrastructure.py
dangdai-mobile/: .env.example  .gitignore  app.config.js  app.json  eas.json  eslint.config.mjs  jest.config.js  jest.setup.js  metro.config.js  package-lock.json  package.json  playwright.config.js  tamagui.build.js  tamagui.config.js  tamagui.config.test.ts  tamagui.config.ts  tsconfig.base.json
docs/: Flash-card.tsv
terraform/: .gitignore  container_apps.tf  main.tf  openai.tf  outputs.tf  terraform.tfvars.example  tfplan  variables.tf
(+182 files in other folders)
